--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,4 @@ huggingface/** filter=lfs diff=lfs merge=lfs -text
 **/*.bin filter=lfs diff=lfs merge=lfs -text
 **/*.zip filter=lfs diff=lfs merge=lfs -text
 huggingface.zip filter=lfs diff=lfs merge=lfs -text
+.safetensors filter=lfs diff=lfs merge=lfs -text
